map-reduce hive spark

--- a/bigdata/03-spark/Data_processing_using_PySpark.ipynb
+++ b/bigdata/03-spark/Data_processing_using_PySpark.ipynb
@@ -8,12 +8,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Si va a trabajar en AWS EMR JupyterHub, puede saltar esta config de Colab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Configuración de Spark en Google Colab"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#configuración en google colab de spark y pyspark\n",
+    "# configuración de Spark en Google Colab\n",
     "from google.colab import drive\n",
     "drive.mount('/content/gdrive')"
    ]
@@ -24,7 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#instalar java y spark\n",
+    "# configuración de Spark en Google Colab\n",
+    "# instalar java y spark\n",
     "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
     "!wget -q https://downloads.apache.org/spark/spark-3.5.5/spark-3.5.5-bin-hadoop3.tgz\n",
     "!tar xf spark-3.5.5-bin-hadoop3.tgz\n",
@@ -37,6 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#configuración de Spark en Google Colab\n",
     "import os\n",
     "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
     "os.environ[\"SPARK_HOME\"] = \"/content/spark-3.5.5-bin-hadoop3\""
@@ -48,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#configuración de Spark en Google Colab\n",
     "import findspark\n",
     "findspark.init()"
    ]
@@ -58,6 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#configuración de Spark en Google Colab\n",
     "from pyspark.sql import SparkSession\n",
     "# en el cluster EMR no hay necesidad de crear el objeto spark ni sc, ya viene con AWS EMR / Notebooks\n",
     "\n",
@@ -85,6 +103,13 @@
     "#spark=SparkSession.builder.appName('data_processing').getOrCreate()\n",
     "# en el cluster EMR no hay necesidad de hacer esto, ya viene con AWS EMR / Notebooks\n",
     "sc = spark.sparkContext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inicio del procesamiento Spark"
    ]
   },
   {
