--- a/bigdata/03-spark/wordcount-spark-colab.ipynb
+++ b/bigdata/03-spark/wordcount-spark-colab.ipynb
@@ -6,8 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# si esta en EMR o Databricks, estos objetos ya están preconstruidos:\n",
-    "spark"
+    "#configuración de Spark en Google Colab\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')"
    ]
   },
   {
@@ -16,8 +17,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# si esta en EMR o Databricks, estos objetos ya están preconstruidos:\n",
-    "sc"
+    "#configuración de Spark en Google Colab\n",
+    "#instalar java y spark\n",
+    "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
+    "!wget -q https://downloads.apache.org/spark/spark-3.5.5/spark-3.5.5-bin-hadoop3.tgz\n",
+    "!tar xf spark-3.5.5-bin-hadoop3.tgz\n",
+    "!pip install -q findspark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#configuración de Spark en Google Colab\n",
+    "import os\n",
+    "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
+    "os.environ[\"SPARK_HOME\"] = \"/content/spark-3.5.5-bin-hadoop3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#configuración de Spark en Google Colab\n",
+    "import findspark\n",
+    "findspark.init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#configuración de Spark en Google Colab\n",
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder.master(\"local[*]\").getOrCreate()\n",
+    "sc = spark.sparkContext"
    ]
   },
   {
@@ -56,6 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# en AWS S3\n",
+    "#files = sc.textFile(\"s3://emontoyadatalake/datasets/gutenberg-es/*.txt\")\n",
     "files = sc.textFile(\"gdrive/MyDrive/st0263-251/datasets/gutenberg-en/*.txt\")\n",
     "for f in files.take(10):\n",
     "    print(f)"
