--- a/bigdata/03-spark/Data_processing_using_PySpark.ipynb
+++ b/bigdata/03-spark/Data_processing_using_PySpark.ipynb
@@ -8,26 +8,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Si va a trabajar en AWS EMR JupyterHub, puede saltar esta config de Colab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Configuración de Spark en Google Colab"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# configuración de Spark en Google Colab\n",
+    "#configuración en google colab de spark y pyspark\n",
     "from google.colab import drive\n",
     "drive.mount('/content/gdrive')"
    ]
@@ -38,8 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# configuración de Spark en Google Colab\n",
-    "# instalar java y spark\n",
+    "#instalar java y spark\n",
     "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
     "!wget -q https://downloads.apache.org/spark/spark-3.5.5/spark-3.5.5-bin-hadoop3.tgz\n",
     "!tar xf spark-3.5.5-bin-hadoop3.tgz\n",
@@ -52,7 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#configuración de Spark en Google Colab\n",
     "import os\n",
     "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
     "os.environ[\"SPARK_HOME\"] = \"/content/spark-3.5.5-bin-hadoop3\""
@@ -64,7 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#configuración de Spark en Google Colab\n",
     "import findspark\n",
     "findspark.init()"
    ]
@@ -75,41 +58,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#configuración de Spark en Google Colab\n",
     "from pyspark.sql import SparkSession\n",
     "# en el cluster EMR no hay necesidad de crear el objeto spark ni sc, ya viene con AWS EMR / Notebooks\n",
     "\n",
-    "# spark local:\n",
+    "# spark local con archivos locales:\n",
     "spark = SparkSession.builder.master(\"local[*]\").getOrCreate()\n",
     "\n",
-    "# spark conectado con Amazon AWS:\n",
+    "# spark conectado con Amazon AWS S3:\n",
+    "'''\n",
+    "!mkdir -p /content/jars\n",
+    "!wget -q https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar -P /content/jars\n",
+    "!wget -q https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.11.1034/aws-java-sdk-bundle-1.11.1034.jar -P /content/jars\n",
+    "jars = \"/content/jars/hadoop-aws-3.3.4.jar,/content/jars/aws-java-sdk-bundle-1.11.1034.jar\"\n",
     "\n",
     "spark = SparkSession.builder \\\n",
-    "    .appName(\"data_processing\")\\\n",
-    "    .master(\"local[*]\")\\\n",
-    "    .config(\"spark.driver.memory\",\"16G\")\\\n",
-    "    .config(\"spark.driver.maxResultSize\", \"0\") \\\n",
-    "    .config(\"spark.kryoserializer.buffer.max\", \"2000M\")\\\n",
-    "    .config(\"spark.jars.packages\", \"com.amazonaws:aws-java-sdk:1.11.1034,org.apache.hadoop:hadoop-aws:3.3.4\")\\\n",
-    "    .config('fs.s3a.access.key', \"AWS_ACCESS_KEY\" \\\n",
+    "    .appName(\"S3Connection\") \\\n",
+    "    .master(\"local[*]\") \\\n",
+    "    .config(\"spark.jars\", jars) \\\n",
+    "    .config('fs.s3a.access.key', \"AWS_ACCESS_KEY\") \\\n",
     "    .config('fs.s3a.secret.key', \"AWS_SECRET_KEY\") \\\n",
     "    .config('fs.s3a.session.token',\"AWS_SESSION_TOKEN\") \\\n",
-    "    .config('fs.s3a.path.style.access', 'true') \\\n",
-    "    .config('fs.s3a.impl', 'org.apache.hadoop.fs.s3a.S3AFileSystem') \\\n",
-    "    .config('fs.s3a.endpoint', 's3.amazonaws.com') \\\n",
+    "    .config(\"spark.hadoop.fs.s3a.impl\", \"org.apache.hadoop.fs.s3a.S3AFileSystem\") \\\n",
+    "    .config(\"spark.hadoop.fs.s3a.path.style.access\", \"true\") \\\n",
+    "    .config(\"spark.hadoop.fs.s3a.endpoint\", \"s3.amazonaws.com\") \\\n",
     "    .getOrCreate()\n",
+    "'''\n",
     "\n",
-    "#create spark session object\n",
-    "#spark=SparkSession.builder.appName('data_processing').getOrCreate()\n",
-    "# en el cluster EMR no hay necesidad de hacer esto, ya viene con AWS EMR / Notebooks\n",
     "sc = spark.sparkContext"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Inicio del procesamiento Spark"
    ]
   },
   {
@@ -120,7 +95,7 @@
    "source": [
     "# Load csv Dataset \n",
     "# desde gdrvie\n",
-    "df=spark.read.csv('gdrive/MyDrive/st0263-251/datasets/sample_data.csv',inferSchema=True,header=True)\n",
+    "df=spark.read.csv('gdrive/MyDrive/st1800-251/datasets/sample_data.csv',inferSchema=True,header=True)\n",
     "\n",
     "# desde local\n",
     "#df=spark.read.csv('../datasets/sample_data.csv',inferSchema=True,header=True)\n",
@@ -570,7 +545,7 @@
    "source": [
     "#target directory \n",
     "#pathcsv_out='../out/df_csv'\n",
-    "pathcsv_out='gdrive/MyDrive/st0263-251/out/df_csv'\n",
+    "pathcsv_out='gdrive/MyDrive/st1800-251/out/df_csv'\n",
     "# hacia S3\n",
     "# write_uri='s3://bucket_name/df_csv'"
    ]
@@ -602,7 +577,7 @@
    "source": [
     "#target location\n",
     "#pathparquet_out='../out/df_parquet'\n",
-    "pathparquet_out='gdrive/MyDrive/st0263-251/out/df_parquet'\n",
+    "pathparquet_out='gdrive/MyDrive/st1800-251/out/df_parquet'\n",
     "\n",
     "# hacia S3\n",
     "# write_uri='s3://bucket_name/df_parquet'"
